# Simulator

./: .gitignore  CMakeLists.txt  README.md
docs/: QM3_to_Custom_uop_Mapping.md  varification-design.md  verification-backend-api.md  verification-requirments.md  verification-uop-api.md  架构设计.md
docs/architecture/: 01_总览与设计原则.md  02_前端流水级详细设计.md  03_后端流水级详细设计.md  04_IO与握手协议.md  05_flush_redirect_精确恢复.md  06_关键组件与模块边界.md  07_分阶段落地计划与验证.md  08_从骨架到可运行OoO的关键补齐.md
src/: SimCpu.cpp  main.cpp
src/MemSubSystem/: PhysMemory.cpp  cache.cpp
src/MemSubSystem/include/: cache.h
src/back-end/: BackTop.cpp  Commit.cpp  Csr.cpp  Dispatch.cpp  Issue.cpp  Prf.cpp  Rename.cpp  Rob.cpp  WriteBack.cpp
src/back-end/Exu/: Exu.cpp
src/back-end/Exu/include/: Exu.h
src/back-end/Lsu/: Lsu.cpp
src/back-end/Lsu/include/: Lsu.h
src/back-end/include/: BackTop.h  Commit.h  Csr.h  Dispatch.h  Issue.h  Prf.h  Rename.h  Rob.h  UopBuffer.h  WriteBack.h
src/front-end/: Decode.cpp  Decode_riscv.cpp  FrontEnqueue.cpp  FrontTop.cpp  IFetch.cpp  PIFetch.cpp  Predecode.cpp
src/front-end/include/: Decode.h  Decode_riscv.h  FrontEnqueue.h  FrontTop.h  IFetch.h  PIFetch.h  Predecode.h
src/include/: IO.h  PhysMemory.h  PipelinePayload.h  RISCV.h  SimContext.h  SimCpu.h  Uop.h  X86.h  base_types.h
